--- a/config/database.yml
+++ b/config/database.yml
@@ -14,3 +14,9 @@ development:
 test:
   <<: *default
   database: myapp_test
+
+production:
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  url: <%= ENV.fetch("DATABASE_URL") { "" } %>
