--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ databases:
     databaseName: rails_render_demo
     user: rails_render_demo
     plan: free
-    previewPlan: starter
+    previewPlan: free
     region: singapore
     postgresMajorVersion: 14
 
@@ -14,8 +14,8 @@ services:
   - type: web
     name: rails-render-demo
     env: ruby
-    plan: starter
-    previewPlan: starter
+    plan: free
+    previewPlan: free
     region: singapore
     buildCommand: './bin/render-build.sh'
     startCommand: 'bundle exec puma -C config/puma.rb'
